--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "type": "library",
   "minimum-stability": "stable",
   "require": {
-    "php": "^7.3",
+    "php": ">=7.3 <8.2",
     "eurobertics/connfetti-io": "*"
   },
   "autoload": {
